<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">RFID条码扫描</string>
    <string name="app_activityName"> \tUHFDemo\t\t\t\t\tVer 1.1.12</string>
    <string name="hello_world">Hello world!</string>
    <string name="connect">连接</string>
    <string name="Scan">扫描</string>
    <string name="get">Get</string>
    <string name="set">Set</string>
    <string name="tagOperation">操作</string>
    <string name="ConfigSetting">配置</string>
    <string name="action_system">系统配置</string>
    <string name="Message">Message</string>
    <string name="systemlayout_textView_system_tv">参数 </string>
    <string name="systemlayout_button_saveparam">保存 </string>
    <string name="systemlayout_button_paramdefault">默认参数</string>
    <string name="indicatorlayout_tv_indicator">天线选择</string>
    <string name="tab1_layout_textView34">电源管理 </string>
    <string name="tab1_layout_textView5">平台选择 </string>
    <string name="tab1_layout_textView35">连接读写器</string>
    <string name="tab1_layout_textView36">串口 </string>
    <string name="tab1_layout_textView2">天线口 </string>
    <string name="tab1_layout_button_connect">连接 </string>
    <string name="tab1_layout_button_disconnect">断开</string>
    <string name="tab2_layout_button_start">开始</string>
    <string name="tab2_layout_button_stop">停止</string>
    <string name="tab2_layout_button_readclear">清除</string>
    <string name="tab2_layout_button_readset">扫描</string>
    <string name="tab2_layout_textView1">本次读到标签个数：</string>
    <string name="tab2_layout_textView2">        共读到标签个数：</string>
    <string name="tab2_layout_textView3">设备状态：</string>
    <string name="connectSec">连接成功</string>
    <string name="connectFalse">连接失败</string>
    <string name="powerUpSec">上电成功</string>
    <string name="powerUpFalse">上电失败</string>
    <string name="tag">块区</string>
    <string name="hexadecimal">16进制</string>
    <string name="start_address">起始地址</string>
    <string name="tag_count">块数</string>
    <string name="read_operate">读块区操作</string>
    <string name="write_operate">写块区操作</string>
    <string name="lock_operate">锁块区操作</string>
    <string name="lock_type">锁类型</string>
    <string name="selete_antenna">Selete antenna</string>
    <string name="antenna_detecting">天线检测</string>
    <string name="antenna_power">天线功率</string>
    <string name="antenna_detect">检测天线</string>
    <string name="antenna_no_detect">不检测天线</string>
    <string name="antenna1_r">Ate1R</string>
    <string name="antenna2_r">Ate2R</string>
    <string name="antenna3_r">Ate3R</string>
    <string name="antenna4_r">Ate4R</string>
    <string name="antenna1_w">Ate1W</string>
    <string name="antenna2_w">Ate2W</string>
    <string name="antenna3_w">Ate3W</string>
    <string name="antenna4_w">Ate4W</string>
    <string name="antenna1">Antenna1 OutputPower</string>
    <string name="antenna2">Antenna2 OutputPower</string>
    <string name="antenna3">Antenna3 OutputPower</string>
    <string name="antenna4">Antenna4 OutputPower</string>
    <string name="area">区域</string>
    <string name="frequency">频率</string>
    <string name="check_frequency">查看频点</string>
    <string name="set_frequency">设置频点</string>
    <string name="run_time">runTime</string>
</resources>
